--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -3,13 +3,15 @@
   width: 200;
   border: 1px solid red;
   display: inline-block;
+  margin: 20px;
 }
 
 #artboard {
-  min-height: 500px;
-  min-width: 500px;
+  max-height: 500px;
+  max-width: 500px;
   border: 1px solid black;
   display: inline-block;
+  margin: 20px;
 }
 
 .row {
@@ -22,6 +24,6 @@
 .block {
   height: 20px;
   width: 20px;
-  border: 1px solid blue;
+  border: 1px solid black;
   display: inline-block;
 }
